--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,9 +10,9 @@ jobs:
                 uses: actions/checkout@v4
 
             -   name: black
-                uses: psf/black
+                uses: psf/black@stable
 
             -   name: ruff
-                uses: astral-sh/ruff-action
+                uses: astral-sh/ruff-action@stable
                 with:
                     args: 'format --check'
