--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,9 +10,9 @@ jobs:
                 uses: actions/checkout@v4
 
             -   name: black
-                uses: psf/black@stable
+                uses: psf/black@22.10.0
 
             -   name: ruff
-                uses: astral-sh/ruff-action@stable
+                uses: astral-sh/ruff-action@v0.14.0
                 with:
                     args: 'format --check'
